Made nav bar items empty links, added transition state to Call to Action button

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <img src="images/logo200x70.png"/>
         <nav>
           <ul>
-            <li>New Item 1</li>
-            <li>New Item 2</li>
-            <li>New Item 3</li>
-            <li>New Item 4</li>
+            <li><a href="">New Item 1</a></li>
+            <li><a href="">New Item 2</a></li>
+            <li><a href="">New Item 3</a></li>
+            <li><a href="">New Item 4</a></li>
           </ul>
         </nav>
       </div>
